--- a/README.adoc
+++ b/README.adoc
@@ -2,9 +2,9 @@
 
 Easily write configuration or plugins for https://neovim.io/[Neovim] in https://fennel-lang.org/[Fennel], a Lisp that compiles to Lua.
 
-This is aimed at people who want to extend Neovim interactively with a Lisp as you would in some _other_ text editor. Code is evaluated interactively as you work, it feels a lot like editing https://clojure.org/[Clojure] with https://github.com/Olical/conjure[Conjure].
+This is aimed at people who want to extend Neovim interactively with a Lisp as you would in some _other_ text editor. Code is evaluated as you work, it feels a lot like editing https://clojure.org/[Clojure] with https://github.com/Olical/conjure[Conjure].
 
-It provides the tools you need to compile, run and test (even in CI!) Fennel within your editor. It includes a set of macros to make defining and depending on modules far more like Clojure than Lua. No more remembering to put values in a table at the bottom of the file!
+It provides the tools you need to compile, run and test (even in CI!) Fennel within your editor. It includes a set of macros to make defining and depending on modules far more like Clojure than Lua. No more remembering to put values in a table at the bottom of the file.
 
 [source,clojure]
 ----
@@ -82,13 +82,13 @@ If you've required `aniseed.mapping` and executed `init()` you'll be able to use
  * `<localleader>ef` - eval the file from disk.
  * `<localleader>eb` - eval the current buffer.
  * `<localleader>ee` (visual) - eval the visually selected code.
- * `<localleader>t` - eval all loaded tests.
+ * `<localleader>t` - run all loaded tests.
 
 Feel free to have a peek in `fnl/aniseed/mapping.fnl` to see which commands are exposed, you'll be able to write your own custom mappings on top of those easily enough.
 
 == Module macros
 
-Lua and Fennel require you to use `(local ...)` and `(fn ...)` as well as a table as the last value in your file to define modules. This leads to inconsistent syntax and having to jump up and down in the buffer to keep your module's table in sync with what you want to expose and what it should be called.
+Lua and Fennel require you to use `(local ...)` and `(fn ...)` as well as a table as the last value in your file to define modules. This leads to inconsistent syntax and having to jump up and down in the buffer to keep your module's table in sync with what you want to expose.
 
 This unstructured approach also makes it really hard (maybe impossible?) to have an interactive REPL driven work flow. We want to be able to say in a structured way "here's what my module is called, here's what it requires and here's what it defines".
 
@@ -96,9 +96,9 @@ Aniseed makes the following macros available to you which will allow you to writ
 
 === `(module NAME [REQUIRES] [BASE])`
 
-Define a module under the name given by the first argument, this should be the first form in your file. The name should match the path as you would in Clojure namespaces.
+Define a module under the name given by the first argument, this should be the first form in your file. The module name should match the path to the source file with the slashes replaced with periods.
 
-So `fnl/my-plugin/features/backflip.fnl` would start with `(module my-plugin.features.backflip)`. By using the dot syntax we get to build paths that work on any OS, even if their path separator is different.
+So `fnl/my-plugin/features/backflip.fnl` would start with `(module my-plugin.features.backflip)`. By using the period syntax we get to build paths that work on any OS, even if their path separator varies from what we're used to.
 
 The requires are a table where the key is the function you want executed (`require` or `include`) and the values are tables of aliases and module names. Let's take our previous module example and require a utility module into it under an alias of `util`.
 
@@ -128,11 +128,12 @@ Now we have a module that inherits from a Lua module but extends it with an extr
 
 === The `(def...)` family
 
-The `def...` macros help you define values or functions private to your module or exposed to the world. Every `def` macro can be suffixed with a hyphen to keep it private, like `(def- ten 10)`.
+The `def...` macros help you define values or functions publicly or privately. Every `def` macro can be suffixed with a hyphen to keep it private, like `(def- ten 10)`.
 
  * `(def NAME VALUE)` - just like `local` or `var` but Aniseed is now aware of the value and will allow you to refer to it in subsequent evaluations of forms within that module.
  * `(defonce NAME VALUE)` - the same as `def` but will only define once. Subsequent evaluations of this form will do nothing. This is great for keeping process IDs from background jobs between evaluations.
  * `(defn NAME ARGS ...)` - translates to `(def NAME (fn ARGS ...))`, so it's just like the regular `(fn ...)` form really.
+ * `(deftest NAME ...)` - explained in greater detail in the testing section.
 
 == Standard library
 
@@ -158,7 +159,7 @@ Aniseed provides a fair few functions that it uses internally but are designed f
 
 And here's some more useful modules you'll probably want to check out.
 
- * `aniseed.nvim` is actually https://github.com/norcalli/nvim.lua[nvim.lua], an extremely helpful library for controlling Neovim.
+ * `aniseed.nvim` is actually https://github.com/norcalli/nvim.lua[nvim.lua], an extremely helpful library for controlling Neovim with a more expressive syntax.
  * `aniseed.eval` allows you to run more Fennel code through Aniseed.
  * `aniseed.compile` lets you compile strings and files of Fennel into Lua.
 
@@ -171,7 +172,7 @@ My Neovim https://github.com/Olical/dotfiles/tree/master/neovim/.config/nvim[dot
 lua require('aniseed.dotfiles')
 ----
 
-Now try adding some Fennel such as the example below to `~/.config/nvim/fnl/dotfiles/init.fnl`. The next time you open Neovim you'll see `"Hello!"`.
+Now try adding some Fennel, such as the example below, to `~/.config/nvim/fnl/dotfiles/init.fnl`. The next time you open Neovim you'll see `"Hello!"`.
 
 [source,clojure]
 ----
@@ -189,7 +190,7 @@ You can continue to add more files under `fnl/dotfiles` and require them using t
 
 https://github.com/Olical/nvim-local-fennel[nvim-local-fennel] and the experimental https://github.com/Olical/conjure-sourcery[conjure-sourcery] should be good examples of Fennel based plugins (I hope so, I wrote them), here's how to create something new.
 
-We'll start by fetching the `dep.sh` helper script which we'll use to clone and update Aniseed. It can be used for repos other than Aniseed, feel free to reuse it.
+We'll start by fetching the `dep.sh` helper script which we'll use to clone and update Aniseed. It can be used for repos other than Aniseed, use and modify it as you see fit.
 
 [source,bash]
 ----
@@ -214,7 +215,7 @@ Now let's add a small program to `fnl/my-plugin/init.fnl`.
 (print "Hello, World!")
 ----
 
-We can compile the plugin using another helper which will write into the `lua` directory, you should commit that output so that users of your plugin don't have to know it was ever written in Fennel in the first place.
+We can compile the plugin using another helper script which will write into the `lua` directory, you should commit that output so that users of your plugin don't have to know it was ever written in Fennel in the first place.
 
 [source,bash]
 ----
@@ -284,7 +285,7 @@ All of the tests can then be executed using the helper script which will startup
 deps/aniseed/scripts/test.sh
 ----
 
-The `t` assertion table that's defined for you contains a few assertion functions that'll hopefully come in useful.
+The `t` assertion table that's defined for you contains a few assertion functions.
 
  * `(t.= expected result [description])` - check for an expected result.
  * `(t.pr= expected result [descrpition])` - the same but both values will be serialised to a string before comparison, this allows you to compare deeply nested tables.
@@ -300,7 +301,8 @@ deps:
 	scripts/dep.sh Olical aniseed vX.Y.Z # insert latest version
 
 compile:
-	# Optionally prevents hanging Lua files from when you delete Fennel files.
+	# The rm optionally prevents hanging Lua files from when you delete Fennel files.
+	# It's just a slightly cleaner build.
 	rm -rf lua
 	deps/aniseed/scripts/compile.sh
 	deps/aniseed/scripts/embed.sh aniseed my-plugin
