--- a/README.adoc
+++ b/README.adoc
@@ -1,54 +1,10 @@
 = Aniseed
 
-Easily write configuration or plugins for https://neovim.io/[Neovim] in https://fennel-lang.org/[Fennel], a Lisp that compiles to Lua.
+Aniseed bridges the gap between https://fennel-lang.org/[Fennel] (a Lisp that compiles to Lua) and https://neovim.io/[Neovim]. Allowing you to easily write plugins or configuration in a https://clojure.org/[Clojure]-like Lisp with great runtime performance.
 
-https://asciinema.org/a/qmjKuGEsxkDxUhOlfNKLenesJ[image:https://asciinema.org/a/qmjKuGEsxkDxUhOlfNKLenesJ.svg[asciicast]]
+https://asciinema.org/a/326401[image:https://asciinema.org/a/326401.svg[asciicast]]
 
-This is aimed at people who want to extend Neovim interactively with a Lisp as you would in some _other_ text editor. Code is evaluated as you work, it feels a lot like editing https://clojure.org/[Clojure] with https://github.com/Olical/conjure[Conjure].
-
-It provides the tools you need to compile, run and test (even in CI!) Fennel within your editor. It includes a set of macros to make defining and depending on modules far more like Clojure than Lua. No more remembering to put values in a table at the bottom of the file.
-
-[source,clojure]
-----
-(module my-module
-  {;; Require other modules with aliases.
-   require {a aniseed.core
-            nvim aniseed.nvim}
-
-   ;; Inline modules at compile time.
-   include {some-dep my-other.dependency}})
-
-(def- some-private-value 2)
-
-(defn- some-private-fn [x]
-  (* x some-private-value))
-
-(defn a-public-fn [x]
-  (-> x
-      (some-private-fn)
-      (a.inc)))
-
-;; Prevent this value being overwritten on each eval.
-(defonce- some-stateful-thing (some-dep.start-server!))
-
-(comment
-  (a-public-fn 10) ;; => 21
-  (some-private-fn 10) ;; => 20
-  (set nvim.g.hello "world!"))
-----
-
-Aniseed allows you to evaluate any form in this source code to build up your module dynamically with a constant REPL based flow. Once the buffer, file or forms have been evaluated you can even call the function from Lua and Vim Script.
-
-[source,viml]
-----
-lua print(require("my-module")["a-public-fn"](10))
-" Prints: 21
-
-echo g:hello
-" Prints: world!
-----
-
-https://github.com/Olical/nvim-local-fennel[nvim-local-fennel] is an example of what you can do with Aniseed, it allows you to write machine or directory specific configuration in Fennel. It's useful in it's own right but also a good reference for how to write a plugin.
+Further documentation can be found in link:doc/aniseed.txt[`:help aniseed`].
 
 == Installation
 
@@ -56,46 +12,13 @@ Use your favourite plugin manager, I recommend https://github.com/junegunn/vim-p
 
 [source,viml]
 ----
-" Depend on the latest version via tag.
-Plug 'Olical/aniseed', { 'tag': 'v3.2.0' }
-
-" For Fennel highlighting (based on Clojure).
+Plug 'Olical/aniseed', { 'tag': 'v3.3.0' }
 Plug 'bakpakin/fennel.vim'
-
-" Used by the evaluation mappings.
-Plug 'guns/vim-sexp'
-
-" Highly recommended if you're going to use vim-sexp.
-Plug 'tpope/vim-sexp-mappings-for-regular-people'
 ----
 
-The reliance on `vim-sexp` will be replaced by integration with https://github.com/Olical/conjure[Conjure] once I've finished rewriting it with Aniseed. Conjure, with the help of Aniseed, will become a generic suite for working with Lisps in Neovim.
+For interactive evaluation you need to install https://github.com/Olical/conjure[Conjure]. It'll allow you to send portions of your code off for evaluation as well as see the results in an interactive log buffer.
 
-== Mappings
-
-You can use the following mappings inside Fennel buffers to run various chunks of code with the `aniseed.mapping` module.
-
- * `<localleader>E[motion]` - eval the given motion of Fennel code.
- * `<localleader>ee` - eval the current form under the cursor.
- * `<localleader>er` - eval the outermost form under the cursor.
- * `<localleader>ef` - eval the file from disk.
- * `<localleader>eb` - eval the current buffer.
- * `<localleader>ee` (visual) - eval the visually selected code.
- * `<localleader>t` - run all loaded tests.
-
-You'll need to require `aniseed.mapping` and execute the `init` function after Aniseed is loaded by your plugin manager to set everything up.
-
-[source,viml]
-----
-" Initialise all commands and mappings in one go.
-lua require('aniseed.mapping').init()
-
-" Or initialise the parts you want so you can customise things.
-lua require('aniseed.mapping')['init-commands']()
-lua require('aniseed.mapping')['init-mappings']()
-----
-
-Feel free to have a peek in `fnl/aniseed/mapping.fnl` to see which commands are exposed, you'll be able to write your own custom mappings on top of those easily enough.
+You may also be interested in https://github.com/Olical/nvim-local-fennel[nvim-local-fennel] which is essentially a Fennel based version of https://github.com/embear/vim-localvimrc[localvimrc].
 
 == Module macros
 
@@ -261,66 +184,6 @@ We can then refer to our Aniseed copy from `my-plugin.init`.
   {require {a my-plugin.aniseed.core}})
 
 (a.println {:msg "Hello, World!"})
-----
-
-== Testing
-
-Aniseed tests itself with it's own testing tools, so you can see an example inside this very repository. We start by creating a module within our project such as `fnl/foo/math.fnl`.
-
-[source,clojure]
-----
-(module foo.math)
-
-(defn add [a b]
-  (+ a b))
-----
-
-We can then create our test module in `test/fnl/foo/math-test.fnl`.
-
-[source,clojure]
-----
-(module foo.math-test
-  {require {math foo.math}})
-
-;; The `t` assertion table is included automatically via the deftest macro.
-(deftest add
-  (t.= 10 (math.add 6 4) "it adds things together"))
-----
-
-All of the tests can then be executed using the helper script which will startup Neovim, execute the tests, capture the results and finally display them in stdout. It exits with an appropriate status code for use with CI systems (you'll need to ensure `nvim` is available inside your CI somehow).
-
-[source,bash]
-----
-# You'll want to .gitginore /test/lua/ and /test/results.txt.
-# Provide a SUFFIX or PREFIX env var to prepend or append code to the nvim command.
-deps/aniseed/scripts/test.sh
-----
-
-The `t` assertion table that's defined for you contains a few assertion functions.
-
- * `(t.= expected result [description])` - check for an expected result.
- * `(t.pr= expected result [descrpition])` - the same but both values will be serialised to a string before comparison, this allows you to compare deeply nested tables.
- * `(t.ok? result [description])` - check for some truthy value.
-
-== Makefile example
-
-[source,make]
-----
-.PHONY: deps compile test
-
-deps:
-	scripts/dep.sh Olical aniseed vX.Y.Z # insert latest version
-
-compile:
-	# The rm optionally prevents hanging Lua files from when you delete Fennel files.
-	# It's just a slightly cleaner build.
-	rm -rf lua
-	deps/aniseed/scripts/compile.sh
-	deps/aniseed/scripts/embed.sh aniseed my-plugin
-
-test:
-	# This example ensures our tests run with a Fennel buffer open.
-	SUFFIX="foo.fnl" deps/aniseed/scripts/test.sh
 ----
 
 == Unlicenced
