Note about directory name during seed.sh

--- a/README.adoc
+++ b/README.adoc
@@ -24,6 +24,8 @@ You may also be interested in https://github.com/Olical/nvim-local-fennel[nvim-l
 
 `scripts/seed.sh` is provided to make it a little easier to get a plugin up and running. In anew directory (because it will overwrite your `.gitignore` and `Makefile` etc) run the following command.
 
+It will name the plugin after the directory you're currently running it from. Make sure the directory name doesn't include any spaces or special characters because it will be inserted at some points in the seed code for you.
+
 [source,bash]
 ----
 curl -fL https://raw.githubusercontent.com/Olical/aniseed/master/scripts/seed.sh | sh
