--- a/README.adoc
+++ b/README.adoc
@@ -13,7 +13,7 @@ Use your favourite plugin manager, I recommend https://github.com/junegunn/vim-p
 [source,viml]
 ----
 Plug 'Olical/aniseed', { 'tag': 'v3.16.0' }
-Plug 'bakpakin/fennel.vim'
+Plug 'Olical/fennel.vim'
 ----
 
 For interactive evaluation you need to install https://github.com/Olical/conjure[Conjure]. It'll allow you to send portions of your code off for evaluation as well as see the results in an interactive log buffer.
