--- a/README.adoc
+++ b/README.adoc
@@ -19,6 +19,10 @@ For interactive evaluation you need to install https://github.com/Olical/conjure
 
 You may also be interested in https://github.com/Olical/nvim-local-fennel[nvim-local-fennel] which is essentially a Fennel based version of https://github.com/embear/vim-localvimrc[localvimrc].
 
+____
+I'm working on a Neovim + Aniseed + Conjure starter kit that contains everything you need over at https://github.com/Olical/magic-kit[Olical/magic-kit]. It's not finished yet but feel free to check it out and give me some early feedback! You can start your Neovim configuration at that point and grow it in your own direction from there.
+____
+
 == Loading Fennel Neovim configuration
 
 Aniseed has a module called `aniseed.env` which will automatically compile and load Fennel code from your Neovim configuration directory as if it were natively supported by the editor, like Lua and VimL.
